Adding in some Lorem Ipsum to show the way client:visible works.

--- a/src/content/blog/MDXDemo.mdx
+++ b/src/content/blog/MDXDemo.mdx
@@ -11,6 +11,14 @@ import  Counter  from '../../components/Counter';
 
 This is an example of how you can use **MDX** in an Astro project. Below, you'll see a simple React component integrated into the Markdown content.
 
+## Some Lorem Ipsum to take up space
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pharetra scelerisque leo a tempor. Phasellus bibendum interdum mi vel tincidunt. Morbi efficitur eu massa sit amet fermentum. Quisque posuere euismod nunc sed tincidunt. Nunc lobortis vulputate rhoncus. Nam sed interdum neque. Praesent rhoncus rhoncus commodo. Praesent ultrices purus eget magna viverra efficitur.
+
+Maecenas placerat nulla eu tortor molestie euismod. Ut quis ex quis nulla condimentum pulvinar. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas suscipit elit non massa viverra maximus. Vivamus vestibulum hendrerit efficitur. Phasellus metus sapien, euismod eget neque ut, porttitor sollicitudin mi. In placerat felis urna, vel mollis leo ultrices vitae.
+
+Morbi fermentum erat ipsum, et faucibus eros tempor et. Quisque sed ligula pretium, convallis diam non, faucibus leo. Ut a urna nulla. Pellentesque sodales, tellus id scelerisque vulputate, odio ligula tempor magna, eget rhoncus risus lorem nec purus. Phasellus pharetra, augue sit amet pretium blandit, quam neque tempus leo, ut rutrum nisi justo vel magna. Integer et tortor sit amet lorem iaculis rhoncus. Donec eu ipsum vestibulum, tincidunt enim vel, gravida magna. Sed vehicula ex leo, id tempor sem sagittis non. Morbi quis nisl vitae mauris aliquet convallis id quis odio. Nullam pellentesque enim vitae tempus malesuada. Phasellus scelerisque vel magna sit amet commodo. Morbi vulputate in nulla efficitur sollicitudin. Vivamus sapien augue, aliquet a rhoncus fermentum, eleifend vitae est. Nunc hendrerit commodo dolor nec cursus. Vestibulum odio augue, dignissim vitae orci et, facilisis eleifend urna.
+
 ## React Counter Component
 
 Here’s a simple counter component written in React:
